force-app/main/default/objects/CoefficientThermique__c/CoefficientThermique__c.object-meta.xml
<CustomObject>
    <description>Cet objet est utilisé pour la gestion du coefficient thermique des devis CPQ.</description>
    <label>Coefficient Thermique</label>
    <nameField>
        <displayFormat>CT/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coefficients Thermiques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>