force-app/main/default/objects/CoefficientThermique__c/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <formula>IF (TODAY()&gt; DateApplication__c ,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>