force-app/main/default/objects/CoefficientThermique__c/fields/CodeProduit__c.field-meta.xml
<CustomField>
    <fullName>CodeProduit__c</fullName>
    <description>Ce champ est utilisé pour la gestion du coefficient thermique.</description>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code du produit</label>
    <type>Text</type>
</CustomField>