force-app/main/default/objects/CoefficientThermique__c/fields/CodeProduitNiveau1__c.field-meta.xml
<CustomField>
    <fullName>CodeProduitNiveau1__c</fullName>
    <formula>ProduitNiveau1__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Produit Niveau 1</label>
    <type>Text</type>
</CustomField>