force-app/main/default/objects/CoefficientThermique__c/fields/CodeProduitNiveau2__c.field-meta.xml
<CustomField>
    <fullName>CodeProduitNiveau2__c</fullName>
    <formula>ProduitNiveau2__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Produit Niveau 2</label>
    <type>Text</type>
</CustomField>