force-app/main/default/objects/CoefficientThermique__c/fields/CodeProduitNiveau3__c.field-meta.xml
<CustomField>
    <fullName>CodeProduitNiveau3__c</fullName>
    <formula>ProduitNiveau3__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Produit Niveau 3</label>
    <type>Text</type>
</CustomField>