force-app/main/default/objects/CoefficientThermique__c/fields/DateApplication__c.field-meta.xml
<CustomField>
    <fullName>DateApplication__c</fullName>
    <label>Date d&apos;application</label>
    <type>Date</type>
</CustomField>