force-app/main/default/objects/CoefficientThermique__c/fields/FamilleProduit__c.field-meta.xml
<CustomField>
    <fullName>FamilleProduit__c</fullName>
    <description>Ce champ est utilisé pour la gestion du coefficient thermique.</description>
    <formula>TEXT(Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Famille du produit</label>
    <type>Text</type>
</CustomField>