force-app/main/default/objects/CoefficientThermique__c/fields/InputField__c.field-meta.xml
<CustomField>
    <fullName>InputField__c</fullName>
    <description>Champ technique concaténant les valeurs du produit utilisé pour le calcul du coefficient.
Utilisé dans la Price Rule Price016Cal</description>
    <formula>CodeProduit__c&amp;&quot;-&quot;&amp; Niveau1CodeBis__c&amp;&quot;-&quot;&amp;  Niveau2CodeBis__c&amp;&quot;-&quot;&amp;  Niveau3CodeBis__c&amp;&quot;-&quot;&amp;  Niveau4CodeBis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[#] Valeurs d&apos;entrée</label>
    <type>Text</type>
</CustomField>