force-app/main/default/objects/CoefficientThermique__c/fields/Niveau1CodeBis__c.field-meta.xml
<CustomField>
    <fullName>Niveau1CodeBis__c</fullName>
    <formula>IF( ProduitNiveau1__r.OptionDiscriminante__c = TRUE,
			CodeProduitNiveau1__c &amp;&quot;-DISCR&quot;,
			 CodeProduitNiveau1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau 1 Code Bis</label>
    <type>Text</type>
</CustomField>