force-app/main/default/objects/CoefficientThermique__c/fields/Niveau1Description__c.field-meta.xml
<CustomField>
    <fullName>Niveau1Description__c</fullName>
    <description>Ce champ est utilisé pour la gestion du coefficient thermique.</description>
    <label>Niveau 1 description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>