force-app/main/default/objects/CoefficientThermique__c/fields/Niveau1OptionDiscr__c.field-meta.xml
<CustomField>
    <fullName>Niveau1OptionDiscr__c</fullName>
    <formula>ProduitNiveau1__r.OptionDiscriminante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau 1 Option Discr</label>
    <type>Checkbox</type>
</CustomField>