force-app/main/default/objects/CoefficientThermique__c/fields/Niveau2CodeBis__c.field-meta.xml
<CustomField>
    <fullName>Niveau2CodeBis__c</fullName>
    <formula>IF( ProduitNiveau2__r.OptionDiscriminante__c = TRUE,
CodeProduitNiveau2__c &amp;&quot;-DISCR&quot;,
CodeProduitNiveau2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau 2 Code Bis</label>
    <type>Text</type>
</CustomField>