force-app/main/default/objects/CoefficientThermique__c/fields/Niveau2Description__c.field-meta.xml
<CustomField>
    <fullName>Niveau2Description__c</fullName>
    <label>Niveau 2 description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>