force-app/main/default/objects/CoefficientThermique__c/fields/Niveau2OptionDiscr__c.field-meta.xml
<CustomField>
    <fullName>Niveau2OptionDiscr__c</fullName>
    <formula>ProduitNiveau2__r.OptionDiscriminante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau 2 Option Discr</label>
    <type>Checkbox</type>
</CustomField>