force-app/main/default/objects/CoefficientThermique__c/fields/Niveau3CodeBis__c.field-meta.xml
<CustomField>
    <fullName>Niveau3CodeBis__c</fullName>
    <formula>IF( ProduitNiveau3__r.OptionDiscriminante__c = TRUE,
CodeProduitNiveau3__c &amp;&quot;-DISCR&quot;,
CodeProduitNiveau3__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau 3 Code Bis</label>
    <type>Text</type>
</CustomField>