force-app/main/default/objects/CoefficientThermique__c/fields/Niveau3Description__c.field-meta.xml
<CustomField>
    <fullName>Niveau3Description__c</fullName>
    <label>Niveau 3 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>