force-app/main/default/objects/CoefficientThermique__c/fields/Niveau3OptionDiscr__c.field-meta.xml
<CustomField>
    <fullName>Niveau3OptionDiscr__c</fullName>
    <formula>ProduitNiveau3__r.OptionDiscriminante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Niveau 3 Option Discr</label>
    <type>Checkbox</type>
</CustomField>