force-app/main/default/objects/CoefficientThermique__c/fields/OutputField__c.field-meta.xml
<CustomField>
    <fullName>OutputField__c</fullName>
    <description>Valeur formaté du coefficient thermique pour affichage au client (PDF).
Utilisé dans la Price Rule Price016Cal</description>
    <formula>IF(
	CONTAINS(TEXT(Product__r.Family), &quot;Porte&quot;),
	IF (ValeurCoeff1__c&lt;1, &quot;Ud = 0&quot; &amp;  TEXT(ValeurCoeff1__c) &amp; &quot;W/m2.K&quot; ,&quot;Ud = &quot; &amp;  TEXT(ValeurCoeff1__c) &amp; &quot;W/m2.K&quot;),
	IF(
		CONTAINS(TEXT(Product__r.Family) , &quot;Volet&quot;),
		IF(ValeurCoeff1__c&lt;1,&quot;dR = 0&quot; &amp;  TEXT(ValeurCoeff1__c) ,&quot;dR = &quot; &amp;  TEXT(ValeurCoeff1__c) ),
		IF (ValeurCoeff1__c&lt;1,&quot;Uw = 0&quot; &amp;  TEXT(ValeurCoeff1__c) &amp; &quot;W/m2.K, Sw = 0&quot; &amp; TEXT(ValeurCoeff2__c) , &quot;Uw = &quot; &amp;  TEXT(ValeurCoeff1__c) &amp; &quot;W/m2.K, Sw = 0&quot; &amp; TEXT(ValeurCoeff2__c) )
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valeur formatée</label>
    <type>Text</type>
</CustomField>