force-app/main/default/objects/CoefficientThermique__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ce champ est utilisé pour la gestion du coefficient thermique.</description>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Coefficients Thermiques</relationshipLabel>
    <relationshipName>Coefficients_Thermiques</relationshipName>
    <type>Lookup</type>
</CustomField>