force-app/main/default/objects/CoefficientThermique__c/fields/ProduitNiveau1__c.field-meta.xml
<CustomField>
    <fullName>ProduitNiveau1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ce champ est utilisé pour la gestion du coefficient thermique.</description>
    <label>Produit niveau 1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Coefficients Thermiques (Produit Niveau 1)</relationshipLabel>
    <relationshipName>Coefficients_Thermiques1</relationshipName>
    <type>Lookup</type>
</CustomField>