force-app/main/default/objects/CoefficientThermique__c/fields/ProduitNiveau2__c.field-meta.xml
<CustomField>
    <fullName>ProduitNiveau2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit niveau 2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Coefficients Thermiques (Produit Niveau 2)</relationshipLabel>
    <relationshipName>Coefficients_Thermiques2</relationshipName>
    <type>Lookup</type>
</CustomField>