force-app/main/default/objects/CoefficientThermique__c/fields/ProduitNiveau3__c.field-meta.xml
<CustomField>
    <fullName>ProduitNiveau3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit niveau 3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Coefficients Thermiques (Produit Niveau 3)</relationshipLabel>
    <relationshipName>Coefficients_Thermiques3</relationshipName>
    <type>Lookup</type>
</CustomField>