force-app/main/default/objects/CoefficientThermique__c/fields/ValeurCoeff1__c.field-meta.xml
<CustomField>
    <fullName>ValeurCoeff1__c</fullName>
    <label>Valeur Coeff 1</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>