force-app/main/default/objects/CoefficientThermique__c/fields/ValeurCoeff2__c.field-meta.xml
<CustomField>
    <fullName>ValeurCoeff2__c</fullName>
    <label>Valeur Coeff 2</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>