force-app/main/default/objects/CoefficientThermique__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodeProduit__c</columns>
    <columns>Product__c</columns>
    <columns>Actif__c</columns>
    <columns>ProduitNiveau1__c</columns>
    <columns>ProduitNiveau2__c</columns>
    <columns>ProduitNiveau3__c</columns>
    <columns>ProduitNiveau4__c</columns>
    <columns>OutputField__c</columns>
    <columns>InputField__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>